# tt-zephyr-platforms

./: .checkpatch.conf  .gitignore  CMakeLists.txt  Kconfig  LICENSE  MAINTAINERS.yml  README.md  VERSION  west.yml
.github/ISSUE_TEMPLATE/: 001_bug_report.md
.github/workflows/: build-fw.yml  build-native.yml  build-tt-virt-console.yml  compliance.yml  copyright-check.yml  hardware-long.yml  hardware-smoke.yml  license-check.yml  release.yml  run-unit-tests.yml
app/bmc/: CMakeLists.txt  VERSION  prj.conf  sample.yaml
app/dmc/: CMakeLists.txt  Kconfig  VERSION  prj.conf  sample.yaml
app/smc/: CMakeLists.txt  Kconfig.sysbuild  VERSION  prj.conf  recovery.conf  sample.yaml  sysbuild.cmake  vuart.conf  vuart.overlay
cmake/: bootfs_util.cmake  bundle_version.cmake  cpp.cmake
doc/: release.md
doc/release/: migration-guide-18.2.0.md  migration-guide-18.3.0.md  migration-guide-18.4.0.md  release-notes-18.2.0.md  release-notes-18.3.0.md  release-notes-18.4.0.md  release-process.md
drivers/: CMakeLists.txt  Kconfig
drivers/i2c/: Kconfig  (+7 more)
lib/: CMakeLists.txt  Kconfig
scripts/: add-git-hooks.sh  bmc-reset.py  bmc_rtt.py  bootstrap-env.sh  build-combined-fwbundle.sh  check-copyright.py  dmc_reset.py  dmc_rtt.py  encode_spirom_bins.py  find_zephyr_sdk.cmake  get-board-id  manual-release.sh  pcie_utils.py  pre-commit.sh  pre-push.sh  requirements.txt  rescan-pcie.sh  rtt_helper.py  run-reset-hammer.sh  smc_rtt.py  tt_boot_fs.py  tt_flash_runner.py
tests/unit/bitrev/: CMakeLists.txt  testcase.yaml
tests/unit/bitrev/src/: main.c
zephyr/: module.yml  patches.yml
(+395 files in other folders)
